# Research_LeyIA_DataScience

./: .gitignore  BGR_AI_Concept_2030_test.html  BGR_EthicalRules_publication.html  BGR_Readiness_Index_publication.html  README.md  instrucciones-skill-gpt.md  requirements.txt
Research_AI_law/: README.md  pyproject.toml
Research_AI_law/CONTEXTOS/: 1.1FLUJO_EDA_PRELIMINAR_RAW.md  1.PLAN_EDA_PRELIMINAR_RAW.md  2.TRANSICION_FASE2_A_FASE3_MATRIZ_MADRE.md  3.PLAN_FASE3_MATRIZ_MADRE.md  4.PLAN_FASE4_EDA.md  5.PLAN_FASE_MVP_END_TO_END.md  6.ARQUITECTURA_COMPLETA_PROYECTO.md  6.PLAN_FASE5_V.2.2_UPDATE.md  7.PLAN_FASE6.md  7.PLAN_FASES_7_8_Y_CORRECCION_IAPP.md  8.FASE6_V2.1_UPDATE.md  FASE6_EXPLICACION.md  SYSTEM_PROMPT_AGENTE_FASE3.md  pipeline_datascience.md
Research_AI_law/F5_F8_MVP/: Makefile  README.md  manifest_mvp.json  pyproject.toml
Research_AI_law/F5_F8_MVP/FASE5/: FASE5_CIERRE_TECNICO.md  README.md
Research_AI_law/F5_F8_MVP/FASE6/: Makefile  README.md  _fase5_hashes_pre_fase6.json  pyproject.toml
Research_AI_law/F5_F8_MVP/_common/: __init__.py  constants.py  load.py  paths.py
Research_AI_law/F5_F8_MVP/auditoria_fase5_v2_1_plus/: audit_report.md  audit_summary.json
Research_AI_law/F5_F8_MVP/config/: analysis_questions.yaml  forbidden_terms.yaml  language_policy.yaml  methodology_policy.yaml  mvp_architecture.yaml
Research_AI_law/FASE3/: FASE3_CIERRE_DOCUMENTACION_TECNICA.md  TRANSICION_FASE3_A_FASE4_EDA_PRINCIPAL.md  pyproject.toml
Research_AI_law/FASE3/notebooks/: 02_matriz_madre.ipynb
Research_AI_law/FASE3/outputs/: README_MATRIZ_MADRE.md  fase3_auditoria_muestra_valores.csv  fase3_diccionario_variables.csv  fase3_entidades_excluidas_geografia.csv  fase3_fuentes_usadas.csv  fase3_geo_crosswalk_manual.csv  fase3_human_review_log.csv  fase3_issue_resolution_log.csv  fase3_reglas_temporales.csv  fase3_reporte_calidad_matriz.csv  fase3_reporte_calidad_matriz.md  fase3_universo_geografico.csv  manifest.json  matriz_madre_wide.csv
Research_AI_law/FASE3/scripts/: fix_country_names.py  integrate_techieray.py  regenerate_excel.py  update_manifest.py
Research_AI_law/FASE3/src/: __init__.py
Research_AI_law/FASE3/tests/: conftest.py  test_api_contract.py  test_contract_outputs.py  test_manifest.py  test_methodological_rules.py  test_no_synthetic_values.py  test_schemas_and_integrity.py
Research_AI_law/FASE4/: FASE4_CIERRE_DOCUMENTACION_TECNICA.md  README.md  manifest_eda_principal.json  pyproject.toml
Research_AI_law/FASE4/notebooks/: 03_eda_principal.ipynb
Research_AI_law/FUENTES/ANTROPHIC/: 2nd_report.html
Research_AI_law/FUENTES/IAPP/: iapp_dataset_unificado.xlsx  iapp_tracker_structured_raw.csv
Research_AI_law/FUENTES/MICROSOFT/: Microsoft_AI_Reports_Data_unificado.xlsx
Research_AI_law/NUEVA_METODOLOGIA_08/: PLAN_SOLUCION_cuello_botella.md
Research_AI_law/notebooks/: 01_eda_preliminar_raw.ipynb
(+2017 files in other folders)
